# KitsuneJS

./: BytecodesV8.bc1  CMakeLists.txt  CMakePresets.json  Package.swift  README.md  input.js  output.txt
Sources/: AST.swift  GenericLexer.swift  Lexer.swift  Parser.swift  Rule.swift  Token.swift  TreeView.swift  main.swift
Sources/Backend/CABI/: JSBackendCAPI.cpp  JSBackendCAPI.h
Sources/Backend/Context/: Context.cpp  Context.h
Sources/Backend/Tools/: BackendSmoke.cpp  CABISmoke.c  CLionMainConf.cpp  RunSwift.cpp
Sources/Backend/VM/: VM.cpp  VM.h  debug.h
Sources/Backend/VM/Bytecodes/: BytecodeDecoder.h  Bytecodes.h  CodeBlock.h  Decoder.cpp  Decoder.h  Instruction.h
Sources/Backend/VM/GC/: Forward.h  Heap.h  JSCell.h  Region.h  Visitor.h
Sources/Backend/VM/Interpreter/: Interpreter.cpp  Interpreter.h  Register.h
Sources/Backend/VM/Runtime/: CallFrame.h  CodeBlock.h  ConsoleObject.cpp  ConsoleObject.h  Environment.h  GlobalObject.cpp  GlobalObject.h  JSFunction.h  JSObject.h  JSRuntime.h  JSString.h  JSValue.h  PropertyKey.h  Structure.h
Sources/Bridge/Swift/: BackendBridge.swift
Sources/Bridge/SwiftSmoke/: main.swift
Sources/BytecodeGen/: AST.swift  BasicBlock.swift  Bytecodes.swift  CompilationUnit.swift  Compiler.swift  CompilerInternals.swift
Sources/BytecodeGen/LayoutElements/: Header.swift  SectionTable.swift
Sources/Debug/: ASTJustName.swift  ASTLineerizer.swift
Sources/Frontend/: main.swift
Sources/Frontend/BytecodeGen/: Bytecodes.swift
Sources/Frontend/BytecodeGen/Compiler/: BasicBlock.swift  CodeBlock.swift  CompilationUnit.swift  Compiler.swift  CompilerInternals.swift
Sources/Frontend/BytecodeGen/Serializer/: Serializer.swift  SerializerDescription.swift  SerializerInternals.swift
Sources/Frontend/Parser/: Parser.swift
Sources/Frontend/SemanticAnalyzer/: ASTLineerizer.swift  CaptureAnalyzer.swift  DeclBinder.swift  RefBinder.swift  Resolver.swift  ScopeBuilder.swift  SlotAllocator.swift  WalkerImpl.swift
Sources/Parser/: AST.swift  Parser.swift  Token.swift
Sources/SemanticAnalyzer/: ASTLineerizer.swift  Binder.swift  CaptureAnalyzer.swift  CompilationUnit.swift  DeclBinder.swift  IdWrapper.swift  RefBinder.swift  Resolver.swift  ScopeAnalyzer.swift  ScopeBuilder.swift  SemanticAnalyzer.swift  WalkerImpl.swift
Tests/: ArrowFunctionCapturing.js  ArrowFunctions.js  CaptureAnalyzer.js  ClassEdgeCases.js  RandomTest.js  scopeAnalysis.js
Tests/ParserStressForReturnThrow/: 03_for_expr_all_parts.js  04_for_var_decl_init.js  05_for_let_decl_init.js  06_nested_for_continue.js  07_for_in_identifier.js  08_for_of_identifier.js  09_for_await_of_identifier.js  10_for_nested_parens.js  11_return_empty.js  12_return_linebreak_then_expression.js  13_return_same_line_expression.js  14_return_object_literal.js  15_throw_number.js  16_throw_object_literal.js  17_invalid_for_missing_first_semicolon.js  18_invalid_for_missing_right_paren.js  19_invalid_for_missing_body.js  20_invalid_for_in_missing_right_expr.js  21_invalid_for_of_missing_right_expr.js  22_invalid_for_await_instead_of_of.js  23_invalid_return_trailing_binary.js  27_invalid_for_in_var_initializer.js  28_invalid_for_of_let_initializer.js  30_throw_in_function.js
Tests/ParserStressNoPatterns/: 01_expr_precedence.js  02_member_and_calls.js  03_nested_control_flow.js  04_for_variants.js  05_functions_and_return_asi.js  06_object_array_literals.js  07_class_members.js  08_async_arrows.js  09_new_and_members.js  10_try_catch_finally.js  11_invalid_missing_if_paren.js  12_invalid_trailing_binary.js  13_invalid_throw_linebreak.js  14_invalid_member_without_property.js  15_invalid_empty_computed_member.js  16_invalid_unclosed_block.js  17_invalid_async_identifier.js  18_invalid_object_double_comma.js  19_invalid_import_unimplemented.js  20_invalid_switch_unimplemented.js
